src/App.css
:root {
  /* Light Theme Colors */
  --background-color: #FFFFFF;
  --accent-color: #007BFF;
  --text-color: #212529;
  --secondary-text-color: #6C757D;
  --header-font: 'Orbitron', sans-serif;
  --body-font: 'Roboto', sans-serif;
  --gradient-start: #ffffff;
  --gradient-end: #f0f0f0;
  --table-bg: #FFFFFF;
  --table-text: #212529;
  --table-hover-bg: #F8F9FA;
  --table-header-bg: #F0F0F0;
  --container-bg: #F8F9FA;
  --container-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2), -4px -4px 8px rgba(255, 255, 255, 0.1);
  --table-bg: #FFFFFF;
  --table-text: #212529;
  --table-hover-bg: #EFEFEF;
  --table-header-bg: #E8E8E8;
  --table-first-child-bg: #F0F0F0;
  --newWeekHover: #0056b3;
  --scoreboard-bg: #EEEEEE;
  --scoreboard-text: #333;
  --scoreboard-accent: #007BFF;
}

[data-theme='dark'] {
  /* Dark Theme Colors */
  --background-color: #121212;
  --accent-color: #6574cd;
  --text-color: #E9ECEF;
  --secondary-text-color: #ADB5BD;
  --header-font: 'Orbitron', sans-serif;
  --body-font: 'Roboto', sans-serif;
  --gradient-start: #292929;
  --gradient-end: #333333;
  --table-bg: #1E1E1E;
  --table-text: #E9ECEF;
  --table-hover-bg: #292929;
  --table-header-bg: #242424;
  --container-bg: #333333;
  --container-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3), -4px -4px 8px rgba(0, 0, 0, 0.2);
  --newWeekHover: #3647ac;
  --scoreboard-bg: #222;
  --scoreboard-text: #E9ECEF;
  --scoreboard-accent: #6574cd;
}

body {
  margin: 0;
  padding: 0;
  font-family: var(--body-font);
  background-color: var(--background-color);
  color: var(--text-color);
  background-image: linear-gradient(145deg, var(--gradient-start), var(--gradient-end));
}

.App {
  text-align: center;
}

.App-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.125);
  border-bottom: 1px solid var(--accent-color);
}

h1 {
  text-align: center;
  flex-grow: 1;
  padding-left: 20px;
}

.theme-toggle-btn {
  cursor: pointer;
  background-color: transparent;
  border: none;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-right: 20px;
}

.theme-toggle-btn svg {
  fill: var(--text-color);
  transition: fill 0.3s ease;
}

/* Style the div containers for chore components */
.DailyChores, .WeeklyChores, .MonthlyChores {
  margin: 20px;
  padding: 20px;
  background-color: var(--container-bg);
  box-shadow: var(--container-shadow);
  border-radius: 8px;
}

table {
  width: 100%;
  border-collapse: separate;
  border-spacing: 3px 3px;
  margin: 20px 0;
  background-color: var(--container-bg);
  border-radius: 4px;
}

th, td {
  padding: 12px;
  text-align: left;
  background-color: var(--table-bg);
  color: var(--table-text);
  border-radius: 6px;
  box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.1);
}

th {
  background-color: var(--table-header-bg);
  color: var(--text-color);
  text-align: center;
}

td:hover {
  background-color: var(--table-hover-bg);
}

.chore-name:hover {
  background-color: var(--table-hover-bg);
}

th:first-child {
  background-color: var(--container-bg);
  border-color: transparent;
  box-shadow: none;
}

.centerDate {
  text-align: center;
}

.NewWeekButton:focus {
  outline: none;
  box-shadow: 0 0 0 2px rgba(160, 214, 104, 0.5);
}

button svg {
  fill: var(--text-color);
  transition: fill 0.3s ease;
}

button, .NewWeekButton {
  background-color: var(--accent-color);
  color: var(--text-color);
  font-weight: bold;
}

.NewWeekButton {
  border: none;
  padding: 10px 20px;
  cursor: pointer;
  border-radius: 4px;
  font-size: 1em;
  transition: background-color 0.3s;
  margin: 20px auto;
  display: block;
}

.NewWeekButton:hover {
  background-color: var(--newWeekHover);
}

.top-btn {
  position: fixed;
  bottom: 20px;
  right: 30px;
  z-index: 99;
  background-color: var(--accent-color);
  color: var(--background-color);
  border: none;
  outline: none;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1rem;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  transition: background-color 0.3s, transform 0.3s;
}

.top-btn:hover {
  transform: scale(1.1);
  background-color: var(--newWeekHover);
}

h1, h2, h3, h4, h5, h6 {
  font-family: var(--header-font);
  color: var(--accent-color);
  margin: 0.5em 0;
}

p, li, a, span { 
  color: var(--text-color);
}

input, select, textarea {
  background-color: var(--background-color);
  color: var(--text-color);
  border: 1px solid var(--accent-color);
  padding: 10px;
  margin: 10px 0;
  border-radius: 4px;
}

input:focus, select:focus, textarea:focus {
  border-color: var(--accent-color);
  box-shadow: 0 0 0 2px rgba(160, 214, 104, 0.5);
}

input::placeholder, textarea::placeholder {
  color: var(--secondary-text-color);
}

.container {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.fade-in {
  animation: fadeIn 0.3s ease-in-out;
}

@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}

.chore-cell {
  cursor: pointer;
}

.chore-cell {
  font-weight: bold;
}

.cell-initial {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
  font-weight: bold;
}

.chore-name {
  width: 150px;
  max-width: 300px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.chore-name:hover {
  background-color: inherit;
  cursor: default;
}

/* ScoreBoard Style */

.scoreboard {
  background-color: var(--scoreboard-bg);
  color: var(--scoreboard-text);
  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2), -4px -4px 8px rgba(0, 0, 0, 0.1);
  border-radius: 8px;
  padding: 20px;
  margin: 20px auto;
  max-width: 600px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.scoreboard h2 {
  font-size: 1.5rem;
  margin: auto;
  color: var(--scoreboard-accent); /* Use the accent color for headings */
}

.scoreboard .score {
  text-align: center;
  width: 100%;
}

.scoreboard .score h3, .scoreboard .score .score-indicator {
  color: var(--scoreboard-text); /* Ensure text color is readable against the background */
}

.scoreboard .score .score-value {
  font-size: 2.5rem;
  font-family: var(--header-font);
  color: var(--text-color); /* Text color for score values for better visibility */
  margin: 0;
}

/* Media Query for Mobile Devices */

@media (max-width: 768px) {
  .App-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.125);
    border-bottom: 1px solid var(--accent-color);
    flex-direction: row;
    padding: 10px;
    font-size: 0.8rem;
  }
  
  h1 {
    text-align: center;
    flex-grow: 1;
    padding-left: 20px;
  }

  .scoreboard {
    flex-direction: column;
    padding: 15px;
    margin: 10px;
  }

  .scoreboard .score {
    margin-bottom: 20px;
  }

  .scoreboard .score .score-value,
  .scoreboard .score .score-indicator {
    font-size: 2rem;
  }

  .DailyChores, .WeeklyChores, .MonthlyChores, .HiScores {
    margin: 10px;
    padding: 15px;
  }

  button, .NewWeekButton {
    padding: 12px 18px;
    font-size: 0.9em;
  }

  table {
    font-size: 0.9em;
  }

  th, td {
    padding: 8px;
  }

  .DailyChores, .WeeklyChores, .MonthlyChores {
    overflow-x: auto;
  }
}

